changed sitelog color

--- a/sitelog.html
+++ b/sitelog.html
@@ -1,26 +1,19 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,400;0,700;1,700&display=swap" rel="stylesheet"> 
+        <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;650&display=swap" rel="stylesheet">
         <title>sitelog</title>
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
         <link href="/website/styles/style.css" rel="stylesheet" type="text/css" media="all"><style>
         body {
             background-color: #101010;
-            color: #ffa900;
-            font-family: 'IBM Plex Mono',  sans-serif}
-            .sidebar{background-color: #282828}
+            color: #a0a0a0}
             #entry{margin-bottom: 40px}
             h1{font-size: min(10vw, 3rem)}
-            h2{font-size: large}
+            h2{font-size: 1.25rem}
             h2::before{content:"> "; color: #a87000}
-            p, ul{font-size: 1rem}
-            a{color: #ffa900; font-weight: bold; font-style: italic; text-decoration-color: #a87000; text-decoration-thickness: 2px;}
+            a{color: #ffa900}
             a:hover{text-decoration-color: #ffa900; background-color: #ffa900; color: #101010}
-            @media only screen and (max-width: 600px) {
-                body{background-color: #282828}
-                .main{background-color: #101010}
-            }
         </style>
     </head>
 
