--- a/sitelog.html
+++ b/sitelog.html
@@ -7,20 +7,20 @@
         <link href="/website/styles/style.css" rel="stylesheet" type="text/css" media="all"><style>
         body {
             background-color: #101010;
-            color: #a0a0a0}
+            color: #ffa900}
             #entry{margin-bottom: 40px}
             h1{font-size: min(10vw, 3rem)}
             h2{font-size: 1.25rem}
             h2::before{content:"> "; color: #a87000}
-            a{color: #ffa900}
-            a:hover{text-decoration-color: #ffa900; background-color: #ffa900; color: #101010}
+            a{color: #f0f0f0}
+            a:hover{text-decoration-color: #f0f0f0; background-color: #f0f0f0; color: #101010}
         </style>
     </head>
 
     <body>
         <div class="sidebar">
             <div>
-            <p><a href="/website/home">home</a></p>
+            <p><a href="/website/">home</a></p>
             <ul>
                 <li><a href="/website/about">about</a></li>
                 <li><a href="/website/musicians">musicians</a></li>
@@ -38,7 +38,8 @@
     <h1>sitelog</h1>
     
         <details class="navbar">
-            <summary><a href="/website/home">home</a></summary>
+            <summary>back</summary>
+            <a href="/websites/">home</a><br>
             <a href="/website/about">about</a> . 
             <a href="/website/musicians">musicians</a> . 
             <a href="/website/websites">websites</a><br>
@@ -51,7 +52,7 @@
         </details>
 
         
-    <details style="margin-bottom: 40px; margin-top: 12px"><summary><a>More about the site</a></summary><p> 
+    <details style="margin-bottom: 40px; margin-top: 12px"><summary>More about the site</summary><p> 
         i made this site with Firefox in Ubuntu, with a crappy 1366x768 display<br>did my best to make it look decent on mobile, if there's something wrong, please tell me! (<a href="http://discordapp.com/users/691348576093077535" class="discord">discord</a>)<br>
         in existence since july 2022<br>
         the general theme/objective for this is to try to do as much as possible with as little as possible, while still being kinda interesting. Idk if i succeeded h
