finished sitelog colors?

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <li><a href="blender"   title="3d renders in blender"               >blender</a></li>
                 <li><a href="misc"      title="general miscellanea" class="misc"    ><s>misc</s></a></li>
                 <li><a href="buttons"   title="other folks' sites"  class="buttons" >buttons</a></li>
-                <li><a href="sitelog"   title="what's changed"      class="log"     ><s>sitelog</s></a></li>
+                <li><a href="sitelog"   title="what's changed"      class="log"     >sitelog</a></li>
             </ul>
 
     </body>
