--- a/sitelog.html
+++ b/sitelog.html
@@ -39,7 +39,7 @@
     
         <details class="navbar">
             <summary>back</summary>
-            <a href="/websites/">home</a><br>
+            <a href="/website/">home</a><br>
             <a href="/website/about">about</a> . 
             <a href="/website/musicians">musicians</a> . 
             <a href="/website/websites">websites</a><br>
