--- a/misc.html
+++ b/misc.html
@@ -4,6 +4,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;700&display=swap" rel="stylesheet">
         <title>> misc</title>
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
+        <link href="/website/styles/style.css" rel="stylesheet" type="text/css" media="all">
         <link href="/website/styles/miscstyle.css" rel="stylesheet" type="text/css" media="all"><style>
         .journal, .notes, .folder, .exit{padding-left: 20px}
             div.indicator{content: url(misc/folder/dotdotdot.png); margin: 0 auto; display: block}
@@ -18,7 +19,7 @@
     <body>
         <div class="sidebar">
             <div>
-            <p><a href="/website/home">home</a></p>
+            <p><a href="/website/">home</a></p>
             <ul>
                 <li><a href="about">about</a></li>
                 <li><a href="musicians">musicians</a></li>
@@ -36,9 +37,9 @@
         <h1 style="font-size: 3rem">misc</h1>
     
         <div class="navbar">
-        <a href="/website/home">home</a> 
         <details>
-            <summary><a>(more)</a></summary>
+            <summary>back</summary>
+            <a href="/website/">home</a><br>
             <a href="about">about</a> . 
             <a href="musicians">musicians</a> . 
             <a href="websites">websites</a><br>
