fixed misc layout stuff

--- a/misc.html
+++ b/misc.html
@@ -27,7 +27,7 @@
                 <li><a href="words">words</a></li>
                 <li><a href="doodles">doodles</a></li>
                 <li><a href="blender">blender</a></li>
-                <li><b><i>misc</i></b></li>
+                <li><b>misc</b></li>
                 <li><a href="buttons">buttons</a></li>
                 <li><a href="sitelog">sitelog</a></li>
             </ul></div>
@@ -46,7 +46,7 @@
             <a href="words">words</a> . 
             <a href="doodles">doodles</a> . 
             <a href="blender">blender</a> . 
-            <b><i>misc</i></b><br>
+            <b>misc</b><br>
             <a href="buttons">buttons</a> . 
             <a href="sitelog">sitelog</a>
         </details>
@@ -56,7 +56,7 @@
             <br>You step into a dark room, it's completely empty and somehow lit by a monochromatic green light. It's slightly nauseating.
             <br>You see a drawing table. On it is a notebook and a folder. Besides the table is a heavily scratched wall covered in sticky notes.
         </p>
-            <div class="journal" style="padding-top: 1rem">> <a href="misc/journal">open the notebook</a></div>
+            <div class="journal">> <a href="misc/journal">open the notebook</a></div>
             <div class="notes">> <a href="misc/phrases">look at the sticky notes</a></div>
             <div class="folder">> <a href="misc/folder">open the folder</a></div>
             <div class="exit">> <a href="home">walk back out the door</a></div><br>
