changed other misc pages

--- a/misc/folder.html
+++ b/misc/folder.html
@@ -4,13 +4,13 @@
         <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;700&display=swap" rel="stylesheet">
         <title>> folder</title>
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
+        <link href="/website/styles/style.css" rel="stylesheet" type="text/css" media="all">
         <link href="/website/styles/miscstyle.css" rel="stylesheet" type="text/css" media="all"><style>
         .folder{max-width: 750px;
         border-left: solid #15c405 4px;
         padding: 0 13px;
         margin: 10px 0px}
-        ul{margin: 0px}
-        summary{font-size: 1.1rem; font-weight: bold;}
+        summary{font-weight: bold;}
         @media only screen and (max-width: 600px) {
             .folder{margin: 8px -28px}
         }
@@ -32,7 +32,8 @@
         <h1 style="font-size: 3rem">folder</h1>
     
         <details class="navbar">
-            <summary style="font-weight: normal; font-size: 1rem;"><a href="/website/misc">back to misc</a></summary>
+            <summary>back</summary>
+            <a href="/website/misc">misc</a><br>
             <a href="journal">journal</a> . 
             <a href="phrases">wall</a> . 
             <b><i>folder</i></b><br>
