--- a/misc/phrases.html
+++ b/misc/phrases.html
@@ -4,6 +4,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;700&display=swap" rel="stylesheet">
         <title>> wall</title>
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
+        <link href="/website/styles/style.css" rel="stylesheet" type="text/css" media="all">
         <link href="/website/styles/miscstyle.css" rel="stylesheet" type="text/css" media="all"><style>
         #notes{display: grid;
             grid-template-columns: auto auto auto;
@@ -38,7 +39,8 @@
         <h1 style="font-size: 3rem">wall</h1>
     
         <details class="navbar">
-            <summary><a href="/website/misc">back to misc</a></summary>
+            <summary>back</summary>
+            <a href="/website/misc">misc</a><br>
             <a href="journal">journal</a> . 
             <b><i>wall</i></b> . 
             <a href="folder">folder</a><br>
