--- a/misc/journal.html
+++ b/misc/journal.html
@@ -4,6 +4,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;700&display=swap" rel="stylesheet">
         <title>> journal</title>
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
+        <link href="/website/styles/style.css" rel="stylesheet" type="text/css" media="all">
         <link href="/website/styles/miscstyle.css" rel="stylesheet" type="text/css" media="all"><style>
         .entry{background-color: #072502;
         border-left: solid #15c405 4px;
@@ -32,7 +33,8 @@
         <h1 style="font-size: 3rem">journal</h1>
     
         <details class="navbar">
-            <summary><a href="/website/misc">back to misc</a></summary>
+            <summary>back</summary>
+            <a href="/website/misc">misc</a><br>
             <b><i>journal</i></b> . 
             <a href="phrases">wall</a> . 
             <a href="folder">folder</a><br>
