fixed more layout things

--- a/misc/folder.html
+++ b/misc/folder.html
@@ -7,7 +7,7 @@
         <link href="/website/styles/style.css" rel="stylesheet" type="text/css" media="all">
         <link href="/website/styles/miscstyle.css" rel="stylesheet" type="text/css" media="all"><style>
         .folder{max-width: 750px;
-        border-left: solid #15c405 4px;
+        border-left: solid #15c405 3px;
         padding: 0 13px;
         margin: 10px 0px}
         summary{font-weight: bold;}
@@ -38,7 +38,7 @@
 
         <p>You open the folder to find... more folders.</p>
     <details class="folder">
-        <summary><a>index(es)</a></summary>
+        <summary>index(es)</summary>
         <ul>
             <li><a href="folder/index">index</a>: the earliest version, with rounded corners.</li>
             <li><a href="folder/index2">index2</a>: a version with a sidebar and descriptions for pages.</li>
@@ -49,7 +49,7 @@
     </details>
 
     <details class="folder">
-        <summary><a>handdrawn/doodle</a></summary>
+        <summary>handdrawn/doodles</summary>
         When i originally made the handdrawn/doodles page, as the name suggested, everything was supposed to be handdrawn, even the text. But after trying to chroma key the text+drawings out (because i didn't want an ugly border in the images), 
         once with black on white and then with black on green to see if it helped (it didn't, i suck at chroma key), i just gave up and had to settle for the separated text and drawing.
         <ul>
@@ -66,7 +66,7 @@
     </details>
 
     <details class="folder">
-        <summary><a>html/css experiments</a></summary>
+        <summary>html/css experiments</summary>
         <ul>
             <li><a href="folder/zine/0">nameless zine</a>: refer to <a href="journal#zine">journal entry</a>.</li>
             <li><a href="folder/difference">difference</a>: a thing about the importance of difference. Moved it here because it... doesn't really fit.</li>
@@ -77,7 +77,7 @@
     </details>
 
     <details class="folder">
-        <summary><a>miscellaneous images</a></summary>
+        <summary>miscellaneous images</summary>
         <ul>
             <li><a href="folder/oldnowhere.gif">oldnowhere</a>: the old button that fit with the old dark style of the site.</li>
             <li><a href="folder/monsuta.png">monsuta</a>: i originally put this in the blender page upstairs, but the contrast sucked so i took it out. now it's here.</li>
