--- a/misc/folder.html
+++ b/misc/folder.html
@@ -53,15 +53,15 @@
         When i originally made the handdrawn/doodles page, as the name suggested, everything was supposed to be handdrawn, even the text. But after trying to chroma key the text+drawings out (because i didn't want an ugly border in the images), 
         once with black on white and then with black on green to see if it helped (it didn't, i suck at chroma key), i just gave up and had to settle for the separated text and drawing.
         <ul>
-            <li><a href="folder/original1.jpg">try #1</a></li>
-            <li><a href="folder/original2.jpg">try #2</a></li>
-            <li>original <a href="folder/handdrawn">{handdrawn}</a> page</li>
+            <li><a href="folder/doodles/original1.jpg">try #1</a></li>
+            <li><a href="folder/doodles/original2.jpg">try #2</a></li>
+            <li>original <a href="folder/doodles/handdrawn">{handdrawn}</a> page</li>
         </ul>
         since everything else was handdrawn (except for the text), the buttons were also supposed to be handdrawn, but the contrast sucked (especially the etc button) so i scrapped it for pixel-y gifs, and changed the header accordingly. 
         <ul>
-            <li><a href="folder/people_button.jpg">people</a></li>
-            <li><a href="folder/ruler_and_compass_button.jpg">ruler and compass</a></li>
-            <li><a href="folder/etc_button.jpg">etc (the culprit)</a></li>
+            <li><a href="folder/doodles/people_button.jpg">people</a></li>
+            <li><a href="folder/doodles/ruler_and_compass_button.jpg">ruler and compass</a></li>
+            <li><a href="folder/doodles/etc_button.jpg">etc (the culprit)</a></li>
         </ul>
     </details>
 
@@ -79,10 +79,12 @@
     <details class="folder">
         <summary>miscellaneous images</summary>
         <ul>
-            <li><a href="folder/oldnowhere.gif">oldnowhere</a>: the old button that fit with the old dark style of the site.</li>
-            <li><a href="folder/monsuta.png">monsuta</a>: i originally put this in the blender page upstairs, but the contrast sucked so i took it out. now it's here.</li>
-            <li><a href="folder/square.png">square</a>: another thing from the blenders, this time removed because it messed up the spacing.</li>
-            <li><a href="folder/redlonely.png">redlonely</a>: a version of a doodle that i wanted to use for status.cafe, but i don't think it looks very good.</li>
+            <li><a href="folder/images/oldnowhere.gif">oldnowhere</a>: the old button that fit with the old dark style of the site.</li>
+            <li><a href="folder/images/dingus.png">dingus</a>: an old version of the dingus image used in the <a href="/website/about">about me</a> page.</li>
+            <li><a href="folder/images/monsuta.png">monsuta</a>: i originally put this in the blender page upstairs, but the contrast sucked so i took it out. now it's here.</li>
+            <li><a href="folder/images/square.png">square</a>: another thing from the blenders, this time removed because it messed up the spacing.</li>
+            <li><a href="folder/images/redlonely.png">redlonely</a>: a version of a doodle that i wanted to use for status.cafe, but i don't think it looks very good.</li>
+            <li><a href="folder/images/oldguy.png">oldguy</a>: the old version of the guy in the status.cafe page.</li>
         </ul>
     </details>
         </div>
