changed a font and tidied some stuff up

--- a/misc/folder.html
+++ b/misc/folder.html
@@ -40,11 +40,11 @@
     <details class="folder">
         <summary>index(es)</summary>
         <ul>
-            <li><a href="folder/index">index</a>: the earliest version, with rounded corners.</li>
-            <li><a href="folder/index2">index2</a>: a version with a sidebar and descriptions for pages.</li>
-            <li><a href="folder/index3">index3</a>: a simpler version without a sidebar.</li>
-            <li><a href="folder/index4">index4</a>: an even simpler version designed for mobile first.</li>
-            <li><a href="folder/building.png">building</a>: the first image i meant to put on the current welcome page.</li>
+            <li><a href="folder/indexes/index">index</a>: the earliest version, with rounded corners.</li>
+            <li><a href="folder/indexes/index2">index2</a>: a version with a sidebar and descriptions for pages.</li>
+            <li><a href="folder/indexes/index3">index3</a>: a simpler version without a sidebar.</li>
+            <li><a href="folder/indexes/index4">index4</a>: an even simpler version designed for mobile first.</li>
+            <li><a href="folder/indexes/building.png">building</a>: the first image i meant to put on the current welcome page.</li>
         </ul>
     </details>
 
