--- a/misc/folder.html
+++ b/misc/folder.html
@@ -36,7 +36,7 @@
             <b><i>folder</i></b><br>
         </details>
 
-        <p>You open the folder to find... more folders.</p>
+        <p>You open the folder to find... more folders. And a sticky note with several font licenses.</p>
     <details class="folder">
         <summary>index(es)</summary>
         <ul>
