added licenses and copyright info for the fonts

--- a/misc/folder/indexes/index2.html
+++ b/misc/folder/indexes/index2.html
@@ -4,10 +4,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap" rel="stylesheet"> 
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@800&display=swap" rel="stylesheet"> 
         <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@700&display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@1,400&display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@1,700&display=swap" rel="stylesheet"> 
-        <link href="https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:wght@700&display=swap" rel="stylesheet"> 
-        <link href="https://fonts.googleapis.com/css2?family=Marmelad&display=swap" rel="stylesheet"> 
+        <link href="https://fonts.googleapis.com/css2?family=Crimson+Pro:ital,wght@1,700&display=swap" rel="stylesheet"> 
         <meta charset="UTF-8">
         <title>cvni81</title>
         <link href="style2.css" rel="stylesheet" type="text/css" media="all"><style>
@@ -17,10 +14,6 @@
             margin:0px;}
             .misc{color: #f0f0f0;
             font-family: 'Space Grotesk', sans-serif;}
-            .websites{color: #f0f0f0;
-            font-family: 'Marmelad', sans-serif;}
-            .words{color: #f0f0f0;
-            font-family: 'Atkinson Hyperlegible', sans-serif}
             a.misc, a.i, a.log, a.buttons{font-style: italic;}
             a.buttons:hover{color: #7ba0cc; text-decoration-color:#7ba0cc}
             a.misc:hover{color: #15c405;
@@ -29,8 +22,7 @@
             text-decoration-color: #ffa900;}
             a.websites:hover{color: #F2CF68;
             text-decoration-color: #F2CF68;}
-            .i, .buttons{font-family: 'Libre Baskerville', serif}
-            .log{font-family: 'IBM Plex Mono', sans-serif}
+            .i, .buttons{font-family: 'Crimson Pro', serif}
             .small{font-size: large}
         </style></head>
 
@@ -48,16 +40,16 @@
     <div style="font-size:x-large; padding-left: 50px; margin: auto 0;">
         <a href="/website/about">about</a> .......... <span class="small">stuff about me</span><br>
         <a href="/website/musicians">musicians</a> .......... <span class="small">good music people</span><br>
-        <a href="/website/websites" class="websites">websites</a> .......... <span class="small">cool websites i've collected</span><br>
+        <a href="/website/websites">websites</a> .......... <span class="small">cool websites i've collected</span><br>
         <br>
-        <a href="/website/words" class="words">words</a> .......... <span class="small">poems and other things</span><br>
+        <a href="/website/words">words</a> .......... <span class="small">poems and other things</span><br>
         <a href="/website/blender">blender</a> .......... <span class="small">stuff i've made in blender</span><br>
         <a href="/website/doodles" class="i">doodles</a> .......... <span class="small">stuff i draw</span><br>
         <a href="/website/misc" class="misc">misc</a> .......... <span class="small">other things</span><br>
         <br>
         <a href="/website/buttons" class="buttons">buttons</a> .......... <span class="small">links to other websites</span><br>
         <a href="/website/404.html"><s>guestbook</s></a> .......... <span class="small">say hi!</span><br>
-        <a href="/website/sitelog" class="log">sitelog</a> .......... <span class="small">changes to the site</span>
+        <a href="/website/sitelog">sitelog</a> .......... <span class="small">changes to the site</span>
     </div>
     </div>
     </body>
