--- a/misc/folder.html
+++ b/misc/folder.html
@@ -36,7 +36,7 @@
             <b><i>folder</i></b><br>
         </details>
 
-        <p>You open the folder to find... more folders. And a sticky note saying the fonts were changed to match the ones used outside the misc part of the site.</p>
+        <p>You open the folder to find... more folders. And a sticky note saying all fonts (except Inter) were changed to match the ones used outside the misc part of the site. You can find the licenses in the <a href="/website/sitelog">sitelog</a>page.</p>
     <details class="folder">
         <summary>index(es)</summary>
         <ul>
@@ -55,7 +55,7 @@
         <ul>
             <li><a href="folder/doodles/original1.jpg">try #1</a></li>
             <li><a href="folder/doodles/original2.jpg">try #2</a></li>
-            <li>original <a href="folder/doodles/handdrawn">{handdrawn}</a> page</li>
+            <li>original <a href="folder/doodles/handdrawn">{handdrawn}</a> page (Might take a while to load because of the large images)</li>
         </ul>
         since everything else was handdrawn (except for the text), the buttons were also supposed to be handdrawn, but the contrast sucked (especially the etc button) so i scrapped it for pixel-y gifs, and changed the header accordingly. 
         <ul>
