--- a/sitelog.html
+++ b/sitelog.html
@@ -52,18 +52,17 @@
         </details>
 
         
-    <details style="margin-bottom: 40px; margin-top: 12px"><summary>More about the site</summary><p> 
+    <details style="margin-top: 12px"><summary>More about the site</summary><p> 
         i made this site with Firefox in Ubuntu, with a crappy 1366x768 display<br>did my best to make it look decent on mobile, if there's something wrong, please tell me! (<a href="http://discordapp.com/users/691348576093077535" class="discord">discord</a>)<br>
         in existence since july 2022<br>
         the general theme/objective for this is to try to do as much as possible with as little as possible, while still being kinda interesting. Idk if i succeeded h</details>
-    <details>
-        <summary>font licenses</summary>
+    <details style="margin-bottom: 40px;"><summary>font licenses</summary>
         Inter, Space Grotesk, Work Sans, Fira Sans and Crimson Pro are licensed under the <a href="https://scripts.sil.org/OFL">Open Font License</a>.<br>
-        Inter: Copyright 2020 The Inter Project Authors (<a href="https://github.com/rsms/inter">https://github.com/rsms/inter</a>)<br>
-        Space Grotesk: Copyright 2020 The Space Grotesk Project Authors (<a href="https://github.com/floriankarsten/space-grotesk">https://github.com/floriankarsten/space-grotesk</a>)
-        Work Sans: Copyright 2019 The Work Sans Project Authors (<a href="https://github.com/weiweihuanghuang/Work-Sans">https://github.com/weiweihuanghuang/Work-Sans</a>)
-        Fira Sans: Copyright (c) 2012-2015, The Mozilla Foundation and Telefonica S.A.
-        Crimson Pro: Copyright 2018 The Crimson Pro Project Authors (<a href="https://github.com/Fonthausen/CrimsonPro">https://github.com/Fonthausen/CrimsonPro</a>)
+        <br>Inter: Copyright 2020 The Inter Project Authors (<a href="https://github.com/rsms/inter">https://github.com/rsms/inter</a>)<br>
+        <br>Space Grotesk: Copyright 2020 The Space Grotesk Project Authors (<a href="https://github.com/floriankarsten/space-grotesk">https://github.com/floriankarsten/space-grotesk</a>)
+        <br>Work Sans: Copyright 2019 The Work Sans Project Authors (<a href="https://github.com/weiweihuanghuang/Work-Sans">https://github.com/weiweihuanghuang/Work-Sans</a>)
+        <br>Fira Sans: Copyright (c) 2012-2015, The Mozilla Foundation and Telefonica S.A.
+        <br>Crimson Pro: Copyright 2018 The Crimson Pro Project Authors (<a href="https://github.com/Fonthausen/CrimsonPro">https://github.com/Fonthausen/CrimsonPro</a>)
     </details>
     <div id="entry">
         <h2>30/3/2023 20:05</h2>
