--- a/sitelog.html
+++ b/sitelog.html
@@ -57,8 +57,8 @@
         in existence since july 2022<br>
         the general theme/objective for this is to try to do as much as possible with as little as possible, while still being kinda interesting. Idk if i succeeded h</details>
     <details style="margin-bottom: 40px;"><summary>font licenses</summary>
-        Inter, Space Grotesk, Work Sans, Fira Sans and Crimson Pro are licensed under the <a href="https://scripts.sil.org/OFL">Open Font License</a>.<br>
-        <br>Inter: Copyright 2020 The Inter Project Authors (<a href="https://github.com/rsms/inter">https://github.com/rsms/inter</a>)<br>
+        Inter, Space Grotesk, Work Sans, Fira Sans and Crimson Pro are licensed under the <a href="https://scripts.sil.org/OFL">Open Font License</a>.
+        <br>Inter: Copyright 2020 The Inter Project Authors (<a href="https://github.com/rsms/inter">https://github.com/rsms/inter</a>)
         <br>Space Grotesk: Copyright 2020 The Space Grotesk Project Authors (<a href="https://github.com/floriankarsten/space-grotesk">https://github.com/floriankarsten/space-grotesk</a>)
         <br>Work Sans: Copyright 2019 The Work Sans Project Authors (<a href="https://github.com/weiweihuanghuang/Work-Sans">https://github.com/weiweihuanghuang/Work-Sans</a>)
         <br>Fira Sans: Copyright (c) 2012-2015, The Mozilla Foundation and Telefonica S.A.
