removed google fonts from most of the sites

--- a/misc.html
+++ b/misc.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;700&display=swap" rel="stylesheet">
         <title>> misc</title>
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
         <link href="/website/styles/style.css" rel="stylesheet" type="text/css" media="all">
@@ -59,7 +58,7 @@
             <div class="journal">> <a href="misc/journal">open the notebook</a></div>
             <div class="notes">> <a href="misc/phrases">look at the sticky notes</a></div>
             <div class="folder">> <a href="misc/folder">open the folder</a></div>
-            <div class="exit">> <a href="home">walk back out the door</a></div><br>
+            <div class="exit">> <a href="/website/">walk back out the door</a></div><br>
             <div class="indicator"></div>
         
         </div>
