--- a/buttons.html
+++ b/buttons.html
@@ -8,12 +8,10 @@
                 --dark-blue: #003473;
                 --black: #101010;
                 background-color: var(--light-blue);
-                color: var(--black);
-                line-height: 1; font-size: 1.2rem}
+                color: var(--black)}
 
             .sidebar, .navbar{border-color: var(--dark-blue);}
 
-            h1{font-style: italic;}
             h2{margin-bottom: 10px; font-style: italic; font-size: 1.5rem;}
             h2::before{content: "- "; color: var(--dark-blue);}
             a{color: var(--dark-blue); text-decoration-color: var(--dark-blue);}
