--- a/doodles.html
+++ b/doodles.html
@@ -5,8 +5,7 @@
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
         <link href="/website/styles/style.css" rel="stylesheet" type="text/css" media="all"><style>
         body{background-image: url('doodles/background.jpg');
-        background-repeat: no-repeat; background-attachment: fixed;
-        line-height: 1; font-size: 1.2rem}
+        background-repeat: no-repeat; background-attachment: fixed}
 
         .sidebar{background-color: #d0d0d0}
         .sidebar, .navbar{border-color: #101010;}
