added serif font whoa!

--- a/buttons.html
+++ b/buttons.html
@@ -8,7 +8,8 @@
                 --dark-blue: #003473;
                 --black: #101010;
                 background-color: var(--light-blue);
-                color: var(--black)}
+                color: var(--black);
+                font-family: 'Times New Roman', 'Georgia', 'Liberation Serif', serif;}
 
             .sidebar, .navbar{border-color: var(--dark-blue);}
 
