--- a/buttons.html
+++ b/buttons.html
@@ -9,7 +9,7 @@
                 --black: #101010;
                 background-color: var(--light-blue);
                 color: var(--black);
-                font-family: 'Times New Roman', 'Georgia', 'Liberation Serif', serif;}
+                font-family: 'Times New Roman', 'Georgia', 'Liberation Serif', serif; font-size: 1.125rem}
 
             .sidebar, .navbar{border-color: var(--dark-blue);}
 
