--- a/index.html
+++ b/index.html
@@ -3,12 +3,10 @@
     <head>
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
         <title>nowhere in particular</title>
-        <link href="styles/style.css" rel="stylesheet" type="text/css" media="all"><style>
-
-            a.buttons:hover{background-color: #7ba0cc; color: #101010; }
-            a.misc:hover{background-color: #202020; color: #15c405}
-            a.log:hover{background-color: #202020; color: #ffa900}
-            a.websites:hover{background-color: #201868; color: #f2cf68}
+        <link href="styles/style.css" rel="stylesheet" type="text/css" media="all">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;700&display=swap" rel="stylesheet"><style>
 
             h1{font-size: min(6.5vw, 2.9rem); margin: 8px 0 16px}
 
