--- a/doodles.html
+++ b/doodles.html
@@ -6,7 +6,7 @@
         <link href="/website/styles/style.css" rel="stylesheet" type="text/css" media="all"><style>
         body{background-image: url('doodles/background.jpg');
         background-repeat: no-repeat; background-attachment: fixed;
-        font-family: 'Times New Roman', 'Georgia', 'Liberation Serif', serif;}
+        font-family: 'Times New Roman', 'Georgia', 'Liberation Serif', serif; font-size: 1.125rem}
 
         .sidebar{background-color: #d0d0d0}
         .sidebar, .navbar{border-color: #101010;}
