added back other fonts woooooooooooooooooooooooooo

--- a/doodles.html
+++ b/doodles.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html>
     <head> 
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Crimson+Pro:ital,wght@0,400;1,600&display=swap" rel="stylesheet"> 
         <title>{doodles}</title>
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
         <link href="/website/styles/style.css" rel="stylesheet" type="text/css" media="all"><style>
         body{background-image: url('doodles/background.jpg');
         background-repeat: no-repeat; background-attachment: fixed;
-        font-family: 'Times New Roman', 'Georgia', 'Liberation Serif', serif; font-size: 1.125rem}
+        font-family: 'Crimson Pro', serif; font-size: 1.125rem}
 
         .sidebar{background-color: #d0d0d0}
         .sidebar, .navbar{border-color: #101010;}
