--- a/misc/folder.html
+++ b/misc/folder.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;700&display=swap" rel="stylesheet">
         <title>> folder</title>
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
         <link href="/website/styles/style.css" rel="stylesheet" type="text/css" media="all">
@@ -35,7 +38,7 @@
             <b><i>folder</i></b><br>
         </details>
 
-        <p>You open the folder to find... more folders. And a sticky note saying that the pages used to use other fonts.</p>
+        <p>You open the folder to find... more folders. And a sticky note saying that the pages sometimes use other fonts.</p>
     <details class="folder">
         <summary>index(es)</summary>
         <ul>
