--- a/buttons.html
+++ b/buttons.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Crimson+Pro:ital,wght@0,400;1,600&display=swap" rel="stylesheet"> 
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
         <title>buttons</title>
         <link href="styles/style.css" rel="stylesheet" type="text/css" media="all"><style>
@@ -9,7 +12,7 @@
                 --black: #101010;
                 background-color: var(--light-blue);
                 color: var(--black);
-                font-family: 'Times New Roman', 'Georgia', 'Liberation Serif', serif; font-size: 1.125rem}
+                font-family: 'Crimson Pro', serif; font-size: 1.125rem}
 
             .sidebar, .navbar{border-color: var(--dark-blue);}
 
