added back italic and changed dingus line height

--- a/buttons.html
+++ b/buttons.html
@@ -41,7 +41,7 @@
         </div>
         <div class="main">
             
-    <h1>buttons</h1>
+    <h1><i>buttons</i></h1>
     
         <details class="navbar">
             <summary>back</summary>
