added back some fonts and made their loading fast

--- a/misc/folder.html
+++ b/misc/folder.html
@@ -38,14 +38,14 @@
             <b><i>folder</i></b><br>
         </details>
 
-        <p>You open the folder to find... more folders. And a sticky note saying that the pages sometimes use other fonts.</p>
+        <p>You open the folder to find... more folders. And a sticky note saying that the pages sometimes use other fonts and the ones that do have an asterisk (*) after them.</p>
     <details class="folder">
         <summary>index(es)</summary>
         <ul>
-            <li><a href="folder/indexes/index">index</a>: the earliest version, with rounded corners.</li>
-            <li><a href="folder/indexes/index2">index2</a>: a version with a sidebar and descriptions for pages.</li>
-            <li><a href="folder/indexes/index3">index3</a>: a simpler version without a sidebar.</li>
-            <li><a href="folder/indexes/index4">index4</a>: an even simpler version designed for mobile first.</li>
+            <li><a href="folder/indexes/index">index</a>*: the earliest version, with rounded corners.</li>
+            <li><a href="folder/indexes/index2">index2</a>*: a version with a sidebar and descriptions for pages.</li>
+            <li><a href="folder/indexes/index3">index3</a>*: a simpler version without a sidebar.</li>
+            <li><a href="folder/indexes/index4">index4</a>*: an even simpler version designed for mobile first.</li>
             <li><a href="folder/indexes/building.png">building</a>: the first image i meant to put on the current welcome page.</li>
         </ul>
     </details>
@@ -57,7 +57,7 @@
         <ul>
             <li><a href="folder/doodles/original1.jpg">try #1</a></li>
             <li><a href="folder/doodles/original2.jpg">try #2</a></li>
-            <li>original <a href="folder/doodles/handdrawn">{handdrawn}</a> page (Might take a while to load because of the large images)</li>
+            <li>original <a href="folder/doodles/handdrawn">{handdrawn}*</a> page (Might take a while to load because of the large images)</li>
         </ul>
         since everything else was handdrawn (except for the text), the buttons were also supposed to be handdrawn, but the contrast sucked (especially the etc button) so i scrapped it for pixel-y gifs, and changed the header accordingly. 
         <ul>
@@ -72,7 +72,7 @@
         <ul>
             <li><a href="folder/zine/0">nameless zine</a>: refer to <a href="journal#zine">journal entry</a>.</li>
             <li><a href="folder/difference">difference</a>: a thing about the importance of difference. Moved it here because it... doesn't really fit.</li>
-            <li><a href="folder/test/test.html">Material 3 index</a>: a remake of a couple pages (somewhat) remade in Google's current design language.</li>
+            <li><a href="folder/test/test.html">Material 3 index</a>*: a remake of a couple pages (somewhat) remade in Google's current design language.</li>
             <li><a href="folder/hi">hi</a>: hi</li>
             <li><a href="folder/ilo_katen">ilo Katen</a>: a toki pona diary entry thing from a future.</li>
         </ul>
