--- a/misc/folder/doodles/handdrawn.html
+++ b/misc/folder/doodles/handdrawn.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html style="height:100%">
     <head>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400;700&display=swap" rel="stylesheet">
         <meta charset="UTF-8">
         <title>{handdrawn}</title>
         <link href="istyle.css" rel="stylesheet" type="text/css" media="all">
