--- a/misc/folder/indexes/index3.html
+++ b/misc/folder/indexes/index3.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap" rel="stylesheet"> 
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@800&display=swap" rel="stylesheet"> 
         <meta charset="UTF-8">
         <title>nowhere in particular</title>
-        <link href="newstyle.css" rel="stylesheet" type="text/css" media="all"><style>
+        <link href="style3.css" rel="stylesheet" type="text/css" media="all"><style>
             a.buttons:hover{color: #7ba0cc; text-decoration-color:#7ba0cc}
             a.misc:hover{color: #15c405;
             text-decoration-color: #15c405;}
