changed a bunch of stuff in the folder

--- a/misc/folder/indexes/index5.html
+++ b/misc/folder/indexes/index5.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400&display=swap" rel="stylesheet"> 
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@800&display=swap" rel="stylesheet"> 
         <meta charset="UTF-8">
@@ -30,11 +32,11 @@
     <body>
 
         <div class="l">
-            <img src="misc/folder/sit.png" style="margin: auto; border: solid #404040 0px; border-radius: 100%;">
+            <img src="sit.png" style="margin: auto; border: solid #404040 0px; border-radius: 100%;">
         </div>
 
         <div class="r">
             <p style="font-size:max(5vw, 5vh)"><b>nowhere in<br>particular.</b><br>
-            <a href="home">enter</a></p>
+            <a href="/website/">enter</a></p>
         </div>
     </body>
