--- a/misc/folder/other/blips/small.html
+++ b/misc/folder/other/blips/small.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;700&display=swap" rel="stylesheet"> 
         <meta charset="UTF-8">
         <title>small</title>
         <style>
-        @import url('https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;700&display=swap');
         body{background-color: #080808;
         display: grid; 
         grid-template-columns: 1fr 1fr;
@@ -24,6 +26,6 @@
             because they end.</p>
         </div>
         <div style="width: 50vw; display: flex">
-            <a href="/website/words/blips" style="align-self: center; margin: auto"><div class="dot"></div></a>
+            <a href="/website/misc/folder/blips" style="align-self: center; margin: auto"><div class="dot"></div></a>
         </div>
     </body>
