--- a/misc/folder/other/hi.html
+++ b/misc/folder/other/hi.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;650&display=swap" rel="stylesheet">
     <head><title>hi</title><style>
-    @import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@700&display=swap');
     body{
         background-color: #6701c7;
         color: #f0f0f0;
