--- a/misc/folder/other/blips.html
+++ b/misc/folder/other/blips.html
@@ -2,9 +2,11 @@
 <html>
     <head>
         <meta charset="UTF-8">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;700&display=swap" rel="stylesheet"> 
         <title>blips</title>
         <style>
-        @import url('https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;700&display=swap');
         body{background-color: #080808;
         color: #808080;
         font-family: 'Fira Sans', sans-serif;
@@ -21,7 +23,7 @@
         p{font-size: xx-large; margin: 20px; position: absolute;}
         </style> 
     <body>
-        <div class="blips"><h1><a href="/website/words">b</a><a href="/website/words">l</a><a href="/website/words">i</a><a href="/website/words">p</a><a href="/website/words">s</a></h1></div>
+        <div class="blips"><h1><a href="/website/misc/folder">b</a><a href="/website/misc/folder">l</a><a href="/website/misc/folder">i</a><a href="/website/misc/folder">p</a><a href="/website/misc/folder">s</a></h1></div>
         <p>short bursts of words;<br>whenever they want to appear.<br><br>
             <a href="blips/split">split</a><br>
             <a href="blips/small">small</a><br>
