--- a/misc/folder/other/blips/liftoff.html
+++ b/misc/folder/other/blips/liftoff.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;700&display=swap" rel="stylesheet"> 
         <meta charset="UTF-8">
         <title>liftoff</title>
         <style>
-        @import url('https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;700&display=swap');
         body{background-color: #080808;
         display: grid; 
         grid-template-columns: 1fr 1fr;
@@ -26,7 +28,7 @@
 
 
                 
-<a href="/website/words/blips">a conglomerate of dots</a><br>
+<a href="/website/misc/folder/blips">a conglomerate of dots</a><br>
 in a myriad of blank<br>
 as far below they sank<br>
 into the dark it clots
@@ -37,7 +39,7 @@ into the dark it clots
 just as they disappear<br>
 mirror opposite the water<br>
 within the empty clutter<br>
-<a href="/website/words/blips">a conglomerate of dots</a>
+<a href="/website/misc/folder/blips">a conglomerate of dots</a>
         
 
 
