--- a/misc/folder/other/nothing.html
+++ b/misc/folder/other/nothing.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Crimson+Pro:ital,wght@1,800&family=Work+Sans:ital@0;1&display=swap" rel="stylesheet">
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
         <title>blog (?)</title>
@@ -13,7 +15,7 @@
     <body>
     <h1>nothing in particular.</h1>
     <p style="margin: 0; margin-top: 5px">a probable blog</p><br>
-    ← <a href="/website/words" style="margin-top: 5px">words</a>
+    ← <a href="/website/misc/folder" style="margin-top: 5px">words</a>
 
     <ul>
         <li><h2><a href="nothing/starting">starting ramblings</a></h2>   <p>24/2/2023</p></span></li>
