--- a/misc/folder/other/nothing/starting.html
+++ b/misc/folder/other/nothing/starting.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Crimson+Pro:ital,wght@1,800&family=Work+Sans:ital@0;1&display=swap" rel="stylesheet">
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
         <title>starting ramblings</title>
@@ -10,7 +12,7 @@
     <body>
     <h1>starting ramblings</h1>
     <p style="margin: 0; margin-top: 5px; color: #808080">24/2/2023</p>
-    ← <a href="/website/words/nothing" style="margin-top: 5px">back</a>
+    ← <a href="/website/misc/folder/nothing" style="margin-top: 5px">back</a>
     <p>
     hello there fellow internet enjoyer.
     <br>nice to have you here. very nice in fact.
