fixed blips links

--- a/misc/folder.html
+++ b/misc/folder.html
@@ -72,7 +72,7 @@
         <summary>html/css experiments/other removed pages</summary>
         <ul>
             <li><a href="folder/other/difference">difference</a>: a thing about the importance of difference. Moved it here because it... doesn't really fit. (Also i keep having to change this page every time i change the design of the site.)</li>
-            <li><a href="folder/blips">blips</a>*: short poems in pages that, though i like the vibe of them, they don't display properly on mobile.</li>
+            <li><a href="folder/other/blips">blips</a>*: short poems in pages that, though i like the vibe of them, they don't display properly on mobile.</li>
             <li><a href="folder/other/zine/0">nameless zine</a>: refer to <a href="journal#zine">journal entry</a>.</li>
             <li><a href="folder/other/nothing">unprobable blog</a>: the sole post in a blog i knew i wouldn't really keep posting on. so here it is.</li>
             <li><a href="folder/other/hi">hi</a>: hi</li>
