--- a/misc/folder/other/hi.html
+++ b/misc/folder/other/hi.html
@@ -2,7 +2,7 @@
 <html>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
-    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;650&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@700&display=swap" rel="stylesheet">
     <head><title>hi</title><style>
     body{
         background-color: #6701c7;
