changed selection colors and added stuff to folder

--- a/buttons.html
+++ b/buttons.html
@@ -14,6 +14,8 @@
                 color: var(--black);
                 font-family: 'Crimson Pro', serif; font-size: 1.125rem}
 
+            ::selection{background-color: var(--dark-blue); color: var(--light-blue)}
+
             .sidebar, .navbar{border-color: var(--dark-blue);}
 
             h2{margin-bottom: 10px; font-style: italic; font-size: 1.5rem;}
