--- a/misc/folder.html
+++ b/misc/folder.html
@@ -66,6 +66,13 @@
             <li><a href="folder/doodles/ruler_and_compass_button.jpg">ruler and compass</a></li>
             <li><a href="folder/doodles/etc_button.jpg">etc (the culprit)</a></li>
         </ul>
+        Also, during the 5th redesign, i tried to remake the buttons to be much smaller and easier to see, but i couldn't make it work right so i kept the big buttons.
+        <ul>
+            <li><a href="folder/doodles/people.gif">people</a></li>
+            <li><a href="folder/doodles/rac.gif">ruler and compass</a> (recreation, i can't recover the original)</li>
+            <li><a href="folder/doodles/etc.gif">etc</a></li>
+        </ul>
+
     </details>
 
     <details class="folder">
