--- a/sitelog.html
+++ b/sitelog.html
@@ -10,6 +10,7 @@
         body {
             background-color: #101010;
             color: #ffa900}
+            ::selection{background-color: #ffa900; color: #101010}
             #entry{margin-bottom: 40px}
             h1{font-size: min(10vw, 3rem)}
             h2{font-size: 1.25rem}
