finally done with the redesign

--- a/index.html
+++ b/index.html
@@ -38,8 +38,7 @@
                 <h1>nowhere in particular.</h1>
                 <p>Hi! Welcome to my bit of the web where i put stuff i like, stuff i do and other things too. (hey that rhymed)<br>
                 I... don't know how to explain or express this place exactly. It's got places you can go that have stuff in them you might want to look at. Basically.<br>
-                Making this website has been a very fun (and challenging (and at times painful)) experience, including learning html and css, and i hope you like having a gander at it, however small this site may be.<br>
-                <span style="background-color: #ad0b0b; color: #f0e010">This site is under some reconstruction (the pages with strikethrough aren't done yet!), so the styles might change and some pages may be broken over the next days!</span><br></p>
+                Making this website has been a very fun (and challenging (and at times painful)) experience, including learning html and css, and i hope you like having a gander at it, however small this site may be.<br></p>
                 <details><summary style="font-weight: bold">current status</summary>
                 <div id="entry" style="margin: 0 20px"><div id="statuscafe"><div id="statuscafe-username"></div><div id="statuscafe-content"></div></div><script src="https://status.cafe/current-status.js?name=cvni81" defer></script></div></details>
             </div>
@@ -51,7 +50,7 @@
                 <li><a href="words"     title="poems and texts and things"          >words</a></li>
                 <li><a href="doodles"   title="stuff i drew"                        >doodles</a></li>
                 <li><a href="blender"   title="3d renders in blender"               >blender</a></li>
-                <li><a href="misc"      title="general miscellanea" class="misc"    ><s>misc</s></a></li>
+                <li><a href="misc"      title="general miscellanea" class="misc"    >misc</a></li>
                 <li><a href="buttons"   title="other folks' sites"  class="buttons" >buttons</a></li>
                 <li><a href="sitelog"   title="what's changed"      class="log"     >sitelog</a></li>
             </ul>
