--- a/sitelog.html
+++ b/sitelog.html
@@ -56,11 +56,16 @@
 
         
     <details style="margin-top: 12px"><summary>More about the site</summary><p> 
-        i made this site with Firefox in Ubuntu, with a crappy 1366x768 display<br>did my best to make it look decent on mobile, if there's something wrong, please tell me! (<a href="http://discordapp.com/users/691348576093077535" class="discord">discord</a>)<br>
+        i made this site with Firefox in Ubuntu, with a crappy 1366x768 display<br>
+        did my best to make it look decent on mobile, if there's something wrong, please tell me! (<a href="http://discordapp.com/users/691348576093077535" class="discord">discord</a>)<br>
         in existence since july 2022<br>
+        been through 5 redesigns<br>
         the general theme/objective for this is to try to do as much as possible with as little as possible, while still being kinda interesting. Idk if i succeeded h</details>
 
     <div id="entry">
+        <h2>3/4/2023 19:23</h2>
+        <p>Finished the 5th redesign and added stuff to the <a href="misc/folder">folder</a>!</p> 
+    </div><div id="entry">
         <h2>30/3/2023 20:05</h2>
         <p>Changed half of the site fonts and some colors to Work Sans, will be done tomorrow (hopefully)</p> 
     </div><div id="entry">
